--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 Welcome!
+<a href='https://join.skype.com/bot/8269e0eb-19c7-4994-8a1c-e88434ffd36e'><img src='https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png'/></a>
 </body>
 </html>
