Updated few URL reference and greeting, also added herc rental example for conversation

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,6 +6,16 @@
 </head>
 <body>
 Welcome!
+
 <a href='https://join.skype.com/bot/8269e0eb-19c7-4994-8a1c-e88434ffd36e'><img src='https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png'/></a>
+
+<br><br><br><br><br><br>
+
+<b><font color="red">***Note: Once you see this page , DO NOT forget to copy ngrok https url and paste it in below input box</font><b>
+</br><br><br><br><br>
+<form name="urlForm" method="post" action="updateURL">
+    ngrok ur &nbsp; : <input type="text" name="url"/> <br/>   
+    <input type="submit" value="Update" />
+</form>
 </body>
 </html>
